--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Sprint 5 Module 1 Project</title>
+  <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="styles.css">
   <script defer src="index.js"></script>
